fix login window width on mobile

--- a/css/login.css
+++ b/css/login.css
@@ -13,6 +13,7 @@
   border-radius: 3px;
   background: rgba(50,50,50,0.85);
   max-width: 360px;
+  min-width: 150px;
   padding: 45px;
   text-align: center;
   box-shadow: 0 0 20px 0 rgba(0, 0, 0, 0.2), 0 5px 5px 0 rgba(0, 0, 0, 0.24);
